# geminitestapp

./: .bazelignore  .bazelrc  .dockerignore  .env.example  .eslint_output.txt  .eslint_output_2.txt  .eslint_output_3.txt  .eslint_output_4.txt  .eslintcache  .eslintcache-migrate  .eslintcache-migrate-content-errors  .eslintcache-migrate-fresh  .eslintcache-migrate-fresh-2  .eslintcache-tests  .gitignore  .next.cache.config.js  .prettierrc  .tool-versions  .vercelignore  1774886515092-auto-keep-trying-interactive-nightly2.mjs  1776190348966-gemini-nightly-pty.mjs  2026-01-27-this-session-is-being-continued-from-a-previous-co.txt  :  AGENTS.md  AI_PATHS_IMPROVEMENT_FINAL.md  BUILD.bazel  CHECKPOINT-4-PHASE3-COMPLETE-PHASE4-KICKOFF.md  CHECKPOINT-5-PHASE4-COMPLETE.md  CLAUDE.md  CLEANUP_DONE.md  CODE_GUIDE.md  COPILOT.md  CheckoutPageClient_lint_report.json  DEDUP_MINIMAL.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  DTO_MIGRATION_GUIDE.md  DatabaseEngineMongoSourceCards_lint_report.json  Dockerfile  FINAL_DEDUP.md  (+1464 more)
.claude/: settings.local.json
.clinerules/: ai-integration-patterns.md  nextjs-project-conventions.md
.github/: copilot-instructions.md  mcp-servers.json  pull_request_template.md
.grok/: settings.json
.playwright/: kangur-mobile-touch.json
.playwright-cli/: page-2026-03-21T06-27-07-377Z.yml
.playwright-mcp/: page-2026-05-12T23-18-20-386Z.yml  page-2026-05-12T23-35-17-014Z.yml  page-2026-05-12T23-38-45-180Z.yml  page-2026-05-12T23-58-04-657Z.yml  page-2026-05-13T00-18-04-744Z.yml  page-2026-05-13T10-36-15-527Z.yml  page-2026-05-13T10-45-22-530Z.yml  page-2026-05-13T10-54-27-616Z.yml  page-2026-05-13T11-09-34-901Z.yml  page-2026-05-13T12-30-11-747Z.yml  page-2026-05-13T12-43-59-688Z.yml  page-2026-05-13T20-37-38-594Z.yml  page-2026-05-13T20-37-58-072Z.yml  page-2026-05-13T20-38-29-952Z.yml  page-2026-05-13T20-38-33-762Z.yml  page-2026-05-13T20-38-45-443Z.yml  page-2026-05-13T20-38-55-762Z.yml  page-2026-05-13T20-38-59-834Z.yml  page-2026-05-13T20-39-24-238Z.yml  page-2026-05-13T20-40-19-079Z.yml  page-2026-05-13T20-40-47-494Z.yml  page-2026-05-13T20-41-07-612Z.yml  page-2026-05-13T20-41-30-906Z.yml  page-2026-05-13T20-41-39-867Z.yml  page-2026-05-13T20-41-46-163Z.yml  page-2026-05-13T20-41-56-624Z.yml  page-2026-05-13T20-46-21-894Z.yml  page-2026-05-13T20-46-29-564Z.yml  page-2026-05-13T20-48-56-970Z.yml  page-2026-05-13T20-49-23-543Z.yml  page-2026-05-13T20-49-27-394Z.yml  page-2026-05-13T20-49-32-403Z.yml  page-2026-05-13T20-49-39-148Z.yml  page-2026-05-13T20-52-50-759Z.yml  page-2026-05-13T20-52-57-248Z.yml  page-2026-05-13T20-53-08-027Z.yml  page-2026-05-13T20-53-18-370Z.yml  page-2026-05-14T02-56-07-256Z.yml  page-2026-05-14T02-56-31-772Z.yml  page-2026-05-14T02-57-17-441Z.yml  (+66 more)
AIPrompts/: GEMINI-upgradednotetest.md  appnotes.md  appnotesGEMINI.md  appnotesImagesBase.md  contextmatrix.md  imagerditor.md  nodesystem.md
__tests__/: debug-get-products.test.ts  next.config.headers.test.ts  test-utils.tsx
app/: actions.ts  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: ClientErrorReporter.tsx  CollapsibleMenu.tsx  DebugPanel.tsx  Menu.tsx  UserNav.tsx  columns.tsx  data-table.tsx  database-columns.tsx  theme-toggle.tsx
data/: base-api-request.json
docs/: AGENTS.md  AI_PATHS.md  AI_PATHS_EXTENDED_REFERENCE.md  API_CACHING.md  ARCHITECTURE_GUARDRAILS.md  BEST_PRACTICES.md  CLAUDE.md  COMPONENT_PATTERNS.md  COPILOT.md  DATA_FETCHING_CACHING.md  DEVELOPER_HANDBOOK.md  IMAGE_STUDIO_OBJECT_LAYOUT_IMPROVEMENT_PLAN.md  MIGRATION_CHECKLIST.md  OWNERS.md  PROMPT_EXPLODER_FEATURE_DOCUMENTATION.md  PROMPT_EXPLODER_MASTER_PLAN.md  PROMPT_EXPLODER_OPERATIONS_RUNBOOK.md  PROMPT_EXPLODER_TOOLTIP_GUIDE.md  README.md  TOOLTIP_DOCUMENTATION_PLATFORM.md  application-performance-operations.md  canonical-artifacts-latest.json  canonical-closeout-2026-04-17.md  canonical-contract-matrix-2026-03-04.md  canonical-contract-matrix-2026-03-05.md  canonical-migration-inventory-2026-03-04.md  canonical-prune-backlog-2026-03-05.csv  case-resolver-performance-stability-runbook.md  fastcomet-storage-plan.md  legacy-compatibility-exception-register-2026-03-04.json  legacy-compatibility-exception-register-2026-03-04.md  legacy-compatibility-exception-register-2026-03-05.md  master-folder-tree-migration-plan-2026-03-04.md  master-folder-tree-shell-phase1-parity-2026-03-05.md  master-folder-tree-shell-phase2-runtime-lifecycle-2026-03-05.md  master-folder-tree-shell-phase3-browser-lifecycle-2026-03-05.md  playwright-action-run-history-schema.md  playwright-action-run-history.md  playwright-step-code-modularity.md  playwright-step-sequencer-integration-checklist.md  (+3 more)
e2e/: 3d-assets.spec.ts  admin-navigation.spec.ts  agent-runs.spec.ts  ai-paths.spec.ts  chatbot.spec.ts  cms.spec.ts  drafter.spec.ts  duels-motion.spec.ts  files.spec.ts  front-manage.spec.ts  integrations.spec.ts  notes-advanced.spec.ts  notes.spec.ts  observability.spec.ts  products-advanced.spec.ts  products.spec.ts  settings.spec.ts
externalkangur/: tailwind.config.js
lib/: api.ts  auth.config.ts  auth.ts  error-system.ts  internationalizationFallback.ts  logger.ts  prisma.ts  query-client.ts  seedInternationalization.ts  types.ts  utils.ts
logs/: agent_runs_lint.txt  eslint_check.json  eslint_config_dump.json  eslint_final_report.json  eslint_fresh_report.json  eslint_fresh_report.txt  eslint_fresh_report_2.txt  eslint_fresh_report_v2.json  eslint_new_fresh.json  eslint_no_cache.txt  eslint_no_cache_2.txt  eslint_report.json  eslint_report.txt  eslint_report_final.json  lint_db_sync.txt  (+39 more)
tools/bazel/: BUILD.bazel  ai_paths_node_docs.sh  bun_bin.sh  case_resolver_capture_mapping_e2e.sh  ci.sh  integration_mongo.sh  integration_prisma.sh  kangur_ai_tutor_selection_handoff_e2e.sh  kangur_mobile_layout_e2e.sh  next_build.sh  node_bin.sh  node_script.sh  npm_run.sh  npm_targets.bzl  playwright_suite.sh  products_list_category_e2e.sh  products_trigger_queue_e2e.sh  repo_lane.sh  run-bazel.sh  scanner_contracts.sh  smoke.sh  specialized-regressions.sh  tsx_script.sh
tools/js/: BUILD.bazel
(+24104 files in other folders)
