module(
    name = "libapp2",
    version = "0.1.0",
)

bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "2.8.1")

node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)

# Keep the default rules_nodejs toolchain version for the first rollout.
# Pin the exact Node 22 patch once the repo is validated against native modules
# such as sharp and node-pty under Bazel execution.
node.toolchain()

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)

npm.npm_translate_lock(
    name = "npm",
    npm_package_lock = "//:package-lock.json",
)

use_repo(node, "nodejs_toolchains")
use_repo(npm, "npm")
