exports_files([
    "bun_bin.sh",
    "case_resolver_capture_mapping_e2e.sh",
    "integration_mongo.sh",
    "kangur_ai_tutor_selection_handoff_e2e.sh",
    "next_build.sh",
    "node_bin.sh",
    "node_script.sh",
    "playwright_suite.sh",
    "products_list_category_e2e.sh",
    "products_trigger_queue_e2e.sh",
    "repo_lane.sh",
    "run-bazel.sh",
    "scanner_contracts.sh",
    "tsx_script.sh",
    "ai_paths_node_docs.sh",
])
