package(default_visibility = ["//visibility:public"])

load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:next/package_json.bzl", next_bin = "bin")
load("@npm//:typescript/package_json.bzl", typescript_bin = "bin")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

eslint_bin.eslint_binary(
    name = "eslint",
)

eslint_bin.eslint_binary(
    name = "lint",
    args = [
        "src",
        "--cache",
        "--cache-location",
        ".eslintcache",
        "--no-error-on-unmatched-pattern",
    ],
    data = [
        "//:lint_inputs",
        "//:node_modules",
        "//:package_metadata",
    ],
)

next_bin.next_binary(
    name = "next",
)

typescript_bin.tsc_binary(
    name = "tsc",
)

typescript_bin.tsc_binary(
    name = "typecheck",
    args = [
        "--project",
        "tsconfig.json",
        "--noEmit",
        "--incremental",
        "false",
    ],
    data = [
        "//:typecheck_inputs",
        "//:node_modules",
        "//:package_metadata",
    ],
)

vitest_bin.vitest_binary(
    name = "vitest",
)

vitest_bin.vitest_binary(
    name = "unit",
    args = [
        "run",
        "--project",
        "unit",
    ],
    data = [
        "//:typecheck_inputs",
        "//:node_modules",
        "//:package_metadata",
    ],
)
